--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,19 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="%PUBLIC_URL%/output.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+   
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site to search SpaceX launches"
+      content="A search tool for SpaceX launches"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>SpaceX Launch API Search</title>
+    <title>aldrin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
